fix memory leak in net proxy app